Fixed issue where navbar was displaying behind scroll bar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,8 @@ nav.navbar {
     background-color: #89A6FB;
     height: 6rem;
     padding: 0;
-    width: 100vw;
+    max-width: 100vw;
+    width: 100%;
     box-shadow: 0 2px rgba(0, 0, 0, .3);
     z-index: 10;
 }
